--- a/app/src/main/res/layout/activity_captura_biometrias.xml
+++ b/app/src/main/res/layout/activity_captura_biometrias.xml
@@ -55,55 +55,6 @@
             android:gravity="bottom"
             >
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="     Fecha"
-                    >
-                </TextView>
-
-                // android:hint="Fecha"
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-
-                android:labelFor="@id/etFecha"
-                >
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etFecha"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="date"
-                    android:maxLines="1"
-                    android:textColor="#000"
-                    android:layout_gravity="left"
-                    android:enabled="false"
-                    />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-                <ImageButton
-                    android:id="@+id/id_obtener_fecha"
-                    android:layout_width="68dp"
-                    android:layout_height="41dp"
-                    android:layout_gravity="right"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@color/primaryColor"
-                    android:src="@drawable/ic_fecha_24dp"
-                    tools:ignore="ContentDescription" />
-
-            </FrameLayout>
-
 
             // Contiene ZONA y ESTANQUE
             <LinearLayout
@@ -185,6 +136,110 @@
                 </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
+
+
+
+
+            // CONTIENE FECHA INICIAL
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="     Fecha Inicial"
+                    >
+                </TextView>
+
+                // android:hint="Fecha"
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/etFecha"
+
+                    android:padding="20dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etFechaIni"
+                        android:layout_width="240dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:enabled="false"
+                        android:inputType="date"
+                        android:maxLines="1"
+                        android:textColor="#000" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageButton
+                    android:id="@+id/id_obtener_fechaIni"
+                    android:layout_width="68dp"
+                    android:layout_height="41dp"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginRight="8dp"
+                    android:background="@color/primaryColor"
+                    android:src="@drawable/ic_fecha_24dp"
+                    tools:ignore="ContentDescription" />
+
+            </FrameLayout>
+
+
+            // CONTIENE FECHA FINAL
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="     Fecha Final"
+                    >
+                </TextView>
+
+                // android:hint="Fecha"
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/etFechaFin"
+
+                    android:padding="20dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etFechaFin"
+                        android:layout_width="240dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:enabled="false"
+                        android:inputType="date"
+                        android:maxLines="1"
+                        android:textColor="#000" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageButton
+                    android:id="@+id/id_obtener_fechaFin"
+                    android:layout_width="68dp"
+                    android:layout_height="41dp"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginRight="8dp"
+                    android:background="@color/primaryColor"
+                    android:src="@drawable/ic_fecha_24dp"
+                    tools:ignore="ContentDescription" />
+
+            </FrameLayout>
 
 
 
