--- a/app/src/main/res/layout/activity_captura_biometrias.xml
+++ b/app/src/main/res/layout/activity_captura_biometrias.xml
@@ -55,89 +55,105 @@
             android:gravity="bottom"
             >
 
-
             // Contiene ZONA y ESTANQUE
-            <LinearLayout
+            <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="10dp"
-                android:gravity="bottom">
+                android:columnCount="2"
+                android:rowCount="2"
+                android:orientation="horizontal"
+                android:paddingTop="10dp"
+                >
 
+                //android:paddingLeft="20dp"
+               // android:paddingStart="20dp"
+                <TextView
+                    android:layout_gravity="left"
+                    android:text="Zona"
 
+                    android:layout_column="0"
+                    android:layout_row="0"
+                    android:padding="5dp"
+
+                    ></TextView>
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight = "1"
-                    android:text="Zona                                                            Estanque">
+                    android:layout_gravity="right"
+                    android:text="Estanque"
+                    android:paddingRight="80dp"
+                    android:paddingEnd="80dp"
+                    android:layout_column="1"
+                    android:layout_row="0"
+                    android:padding="5dp"
+                    >
                 </TextView>
 
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                android:gravity="bottom">
-
-
-
+                // CONTIENE ZONA
                 <com.google.android.material.card.MaterialCardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     app:cardBackgroundColor="#fff"
                     app:rippleColor="@color/primaryLightColor"
                     app:cardElevation="8dp"
-                    android:layout_weight = "1"
+
+                    android:layout_column="0"
+                    android:layout_row="1"
+
+                    android:layout_gravity="left"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="20dp"
+                    android:paddingStart="20dp"
                     >
 
                     <Spinner
                         android:id="@+id/SpinZona"
-                        android:layout_width="match_parent"
+                        android:layout_width="140dp"
                         android:layout_height="match_parent"
                         android:clickable="true"
                         android:padding="20dp"
-                        android:layout_weight = "1"
+
+                        android:layout_column="0"
+                        android:layout_row="1"
+                        android:layout_gravity="left"
+
+                        android:paddingLeft="20dp"
+                        android:paddingStart="20dp"
                         >
                     </Spinner>
 
                 </com.google.android.material.card.MaterialCardView>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight = "1">
 
-                </View>
-
+                // CONTIENE ESTANQUE
 
                 <com.google.android.material.card.MaterialCardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     app:cardBackgroundColor="#fff"
                     app:rippleColor="@color/primaryLightColor"
                     app:cardElevation="8dp"
-                    android:layout_weight = "1"
+
+                    android:layout_column="1"
+                    android:layout_row="1"
+                    android:layout_gravity="right"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:paddingRight="10dp"
                     >
 
-                    <Spinner
-                        android:id="@+id/SpinEstanque"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:clickable="true"
-                        android:padding="20dp"
-                        android:layout_weight = "1"
-                        >
-                    </Spinner>
+                <Spinner
+                    android:id="@+id/SpinEstanque"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:clickable="true"
+                    android:padding="20dp"
+                    >
+                </Spinner>
 
                 </com.google.android.material.card.MaterialCardView>
 
-            </LinearLayout>
+            </GridLayout>
 
 
+
+            ///////////////////////////////////////////////////////////////////////////////////////////////////
 
 
             // CONTIENE FECHA INICIAL
@@ -145,7 +161,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingTop="10dp"
+                android:paddingTop="20dp"
                 >
 
                 <TextView
@@ -251,7 +267,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="20dp"
-                android:gravity="bottom">
+                android:gravity="bottom"
+                >
 
                 <TextView
                     android:layout_width="match_parent"
