Cambios del XML de Biometrias

--- a/app/src/main/res/layout/activity_captura_biometrias.xml
+++ b/app/src/main/res/layout/activity_captura_biometrias.xml
@@ -335,8 +335,7 @@
                         android:textColor="#000"
                         android:maxLines="1"
                         android:inputType="numberDecimal"
-
-
+                        android:background="#ffffff"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
