--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:gravity="center"
-        android:text="Regisrate"
+        android:text="Registrate"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="26sp"
